--- a/AFDetection.ipynb
+++ b/AFDetection.ipynb
@@ -126,6 +126,90 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Utility Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to generate visualizations of classification results\n",
+    "\n",
+    "import os\n",
+    "from sklearn import metrics\n",
+    "import  scikitplot as skplt\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "def svm_feature_importance(coef, names, fig_path, plot_title):\n",
+    "    \"\"\"Visualize the feature importance of the SVM classifier.\"\"\"\n",
+    "    imp = coef\n",
+    "    imp,names = zip(*sorted(zip(imp,names)))\n",
+    "    # Plot the feature importance\n",
+    "    plt.barh(range(len(names)), imp, align='center')\n",
+    "    plt.yticks(range(len(names)), names)\n",
+    "    plt.title(f'{plot_title} Feature Importance')\n",
+    "    plt.savefig(os.path.join(fig_path, 'feature_importance.png'))\n",
+    "\n",
+    "\n",
+    "def visualize_results(results, classifier_name):\n",
+    "    \"\"\"Visualize ROC Curve, Confusion Matrix, Classification Report and Feature Importance.\"\"\"\n",
+    "    feature_names = results['x_train'].columns.tolist()\n",
+    "    # Derive plot titles from classifier name. Make first letter uppercase and replace underscores with spaces\n",
+    "    plot_title = classifier_name.title().replace('_', ' ')\n",
+    "    # Join classifier_name with images_path\n",
+    "    fig_path = os.path.join('images', classifier_name)\n",
+    "    # Create directory if it doesn't exist\n",
+    "    if not os.path.exists(fig_path):\n",
+    "        os.makedirs(fig_path)\n",
+    "    # Feature Importance\n",
+    "    # If Classifier name has svm, use a different method to visualize feature importance\n",
+    "    if 'linear_svm' == classifier_name:\n",
+    "        svm_feature_importance(results['model'].coef_[0], feature_names, fig_path, plot_title)\n",
+    "    elif 'decision_tree' in classifier_name:\n",
+    "        skplt.estimators.plot_feature_importances(results['model'], feature_names=results['x_train'].columns, figsize=(14,6))\n",
+    "        plt.title(f'{plot_title} Feature Importance')\n",
+    "        plt.savefig(os.path.join(fig_path, 'feature_importance.png'))\n",
+    "    # ROC Curve\n",
+    "    roc_curve = metrics.RocCurveDisplay.from_predictions(results['y_test'], results['y_pred'])\n",
+    "    roc_curve.plot()\n",
+    "    plt.title(f'{plot_title} ROC Curve')\n",
+    "    plt.savefig(os.path.join(fig_path, 'roc_curve.png'))\n",
+    "    # Confusion Matrix\n",
+    "    skplt.metrics.plot_confusion_matrix(results['y_test'], results['y_pred'])\n",
+    "    plt.title(f'{plot_title} Confusion Matrix')\n",
+    "    plt.savefig(os.path.join(fig_path, 'confusion_matrix.png'))\n",
+    "    # Plot Precision-Recall Curve\n",
+    "    precision, recall, _ = metrics.precision_recall_curve(results['y_test'], results['y_pred'])\n",
+    "    precision_recall_display = metrics.PrecisionRecallDisplay(precision, recall)\n",
+    "    precision_recall_display.plot()\n",
+    "    plt.title(f'{plot_title} Precision-Recall Curve')\n",
+    "    plt.savefig(os.path.join(fig_path, 'precision_recall_curve.png'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to generate reports for each model\n",
+    "\n",
+    "def generate_report(clf, classifier_name):\n",
+    "\n",
+    "    print(f\"{classifier_name} Results\\n\" + \"-\" * 50 + \"\\n\")\n",
+    "    print('Accuracy: {:.4F} \\n'.format(metrics.accuracy_score(clf['y_test'], clf['y_pred']) * 100))\n",
+    "    print('Confusion Matrix: \\n', metrics.confusion_matrix(clf['y_test'], clf['y_pred']))\n",
+    "    print('Area under curve: {:.4F} \\n'.format(metrics.roc_auc_score(clf['y_test'], clf['y_pred'])))\n",
+    "    print(metrics.classification_report(clf['y_test'], clf['y_pred']))\n",
+    "    print(\"-\" * 50 + \"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Generate Metadata for Dataset"
    ]
   },
