--- a/AFDetection.ipynb
+++ b/AFDetection.ipynb
@@ -207,6 +207,278 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to generate learning curves\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from cuml.svm import SVC\n",
+    "from cuml.ensemble import RandomForestClassifier\n",
+    "from cuml.neighbors import KNeighborsClassifier\n",
+    "from sklearn.model_selection import learning_curve\n",
+    "from sklearn.model_selection import ShuffleSplit\n",
+    "\n",
+    "def plot_learning_curve(\n",
+    "    estimator,\n",
+    "    title,\n",
+    "    X,\n",
+    "    y,\n",
+    "    axes=None,\n",
+    "    ylim=None,\n",
+    "    cv=None,\n",
+    "    n_jobs=None,\n",
+    "    train_sizes=np.linspace(0.1, 1.0, 5),\n",
+    "):\n",
+    "    \"\"\"\n",
+    "    Generate 3 plots: the test and training learning curve, the training\n",
+    "    samples vs fit times curve, the fit times vs score curve.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    estimator : estimator instance\n",
+    "        An estimator instance implementing `fit` and `predict` methods which\n",
+    "        will be cloned for each validation.\n",
+    "\n",
+    "    title : str\n",
+    "        Title for the chart.\n",
+    "\n",
+    "    X : array-like of shape (n_samples, n_features)\n",
+    "        Training vector, where ``n_samples`` is the number of samples and\n",
+    "        ``n_features`` is the number of features.\n",
+    "\n",
+    "    y : array-like of shape (n_samples) or (n_samples, n_features)\n",
+    "        Target relative to ``X`` for classification or regression;\n",
+    "        None for unsupervised learning.\n",
+    "\n",
+    "    axes : array-like of shape (3,), default=None\n",
+    "        Axes to use for plotting the curves.\n",
+    "\n",
+    "    ylim : tuple of shape (2,), default=None\n",
+    "        Defines minimum and maximum y-values plotted, e.g. (ymin, ymax).\n",
+    "\n",
+    "    cv : int, cross-validation generator or an iterable, default=None\n",
+    "        Determines the cross-validation splitting strategy.\n",
+    "        Possible inputs for cv are:\n",
+    "\n",
+    "          - None, to use the default 5-fold cross-validation,\n",
+    "          - integer, to specify the number of folds.\n",
+    "          - :term:`CV splitter`,\n",
+    "          - An iterable yielding (train, test) splits as arrays of indices.\n",
+    "\n",
+    "        For integer/None inputs, if ``y`` is binary or multiclass,\n",
+    "        :class:`StratifiedKFold` used. If the estimator is not a classifier\n",
+    "        or if ``y`` is neither binary nor multiclass, :class:`KFold` is used.\n",
+    "\n",
+    "        Refer :ref:`User Guide <cross_validation>` for the various\n",
+    "        cross-validators that can be used here.\n",
+    "\n",
+    "    n_jobs : int or None, default=None\n",
+    "        Number of jobs to run in parallel.\n",
+    "        ``None`` means 1 unless in a :obj:`joblib.parallel_backend` context.\n",
+    "        ``-1`` means using all processors. See :term:`Glossary <n_jobs>`\n",
+    "        for more details.\n",
+    "\n",
+    "    train_sizes : array-like of shape (n_ticks,)\n",
+    "        Relative or absolute numbers of training examples that will be used to\n",
+    "        generate the learning curve. If the ``dtype`` is float, it is regarded\n",
+    "        as a fraction of the maximum size of the training set (that is\n",
+    "        determined by the selected validation method), i.e. it has to be within\n",
+    "        (0, 1]. Otherwise it is interpreted as absolute sizes of the training\n",
+    "        sets. Note that for classification the number of samples usually have\n",
+    "        to be big enough to contain at least one sample from each class.\n",
+    "        (default: np.linspace(0.1, 1.0, 5))\n",
+    "    \"\"\"\n",
+    "    if axes is None:\n",
+    "        _, axes = plt.subplots(1, 3, figsize=(20, 5))\n",
+    "\n",
+    "    axes[0].set_title(title)\n",
+    "    if ylim is not None:\n",
+    "        axes[0].set_ylim(*ylim)\n",
+    "    axes[0].set_xlabel(\"Training examples\")\n",
+    "    axes[0].set_ylabel(\"Score\")\n",
+    "\n",
+    "    train_sizes, train_scores, test_scores, fit_times, _ = learning_curve(\n",
+    "        estimator,\n",
+    "        X,\n",
+    "        y,\n",
+    "        cv=cv,\n",
+    "        n_jobs=n_jobs,\n",
+    "        train_sizes=train_sizes,\n",
+    "        return_times=True,\n",
+    "    )\n",
+    "    train_scores_mean = np.mean(train_scores, axis=1)\n",
+    "    train_scores_std = np.std(train_scores, axis=1)\n",
+    "    test_scores_mean = np.mean(test_scores, axis=1)\n",
+    "    test_scores_std = np.std(test_scores, axis=1)\n",
+    "    fit_times_mean = np.mean(fit_times, axis=1)\n",
+    "    fit_times_std = np.std(fit_times, axis=1)\n",
+    "\n",
+    "    # Plot learning curve\n",
+    "    axes[0].grid()\n",
+    "    axes[0].fill_between(\n",
+    "        train_sizes,\n",
+    "        train_scores_mean - train_scores_std,\n",
+    "        train_scores_mean + train_scores_std,\n",
+    "        alpha=0.1,\n",
+    "        color=\"r\",\n",
+    "    )\n",
+    "    axes[0].fill_between(\n",
+    "        train_sizes,\n",
+    "        test_scores_mean - test_scores_std,\n",
+    "        test_scores_mean + test_scores_std,\n",
+    "        alpha=0.1,\n",
+    "        color=\"g\",\n",
+    "    )\n",
+    "    axes[0].plot(\n",
+    "        train_sizes, train_scores_mean, \"o-\", color=\"r\", label=\"Training score\"\n",
+    "    )\n",
+    "    axes[0].plot(\n",
+    "        train_sizes, test_scores_mean, \"o-\", color=\"g\", label=\"Cross-validation score\"\n",
+    "    )\n",
+    "    axes[0].legend(loc=\"best\")\n",
+    "\n",
+    "    # Plot n_samples vs fit_times\n",
+    "    axes[1].grid()\n",
+    "    axes[1].plot(train_sizes, fit_times_mean, \"o-\")\n",
+    "    axes[1].fill_between(\n",
+    "        train_sizes,\n",
+    "        fit_times_mean - fit_times_std,\n",
+    "        fit_times_mean + fit_times_std,\n",
+    "        alpha=0.1,\n",
+    "    )\n",
+    "    axes[1].set_xlabel(\"Training examples\")\n",
+    "    axes[1].set_ylabel(\"fit_times\")\n",
+    "    axes[1].set_title(\"Scalability of the model\")\n",
+    "\n",
+    "    # Plot fit_time vs score\n",
+    "    fit_time_argsort = fit_times_mean.argsort()\n",
+    "    fit_time_sorted = fit_times_mean[fit_time_argsort]\n",
+    "    test_scores_mean_sorted = test_scores_mean[fit_time_argsort]\n",
+    "    test_scores_std_sorted = test_scores_std[fit_time_argsort]\n",
+    "    axes[2].grid()\n",
+    "    axes[2].plot(fit_time_sorted, test_scores_mean_sorted, \"o-\")\n",
+    "    axes[2].fill_between(\n",
+    "        fit_time_sorted,\n",
+    "        test_scores_mean_sorted - test_scores_std_sorted,\n",
+    "        test_scores_mean_sorted + test_scores_std_sorted,\n",
+    "        alpha=0.1,\n",
+    "    )\n",
+    "    axes[2].set_xlabel(\"fit_times\")\n",
+    "    axes[2].set_ylabel(\"Score\")\n",
+    "    axes[2].set_title(\"Performance of the model\")\n",
+    "\n",
+    "    return plt\n",
+    "\n",
+    "\n",
+    "def prepare_learning_curve_data(X, y, classifier_name, title, kernel=None):\n",
+    "    fig, axes = plt.subplots(3, 1, figsize=(5, 20))\n",
+    "    # title = r\"Learning Curves (SVM, Linear Kerner, $\\gamma=0.001$)\"\n",
+    "    # SVC is more expensive so we do a lower number of CV iterations:\n",
+    "    cv = ShuffleSplit(n_splits=5, test_size=0.2, random_state=0)\n",
+    "\n",
+    "    if 'svm' in classifier_name:\n",
+    "        if kernel:\n",
+    "            estimator = SVC(kernel=kernel, gamma=0.001)\n",
+    "        else:\n",
+    "            estimator = SVC(gamma=0.001)\n",
+    "    elif classifier_name == \"random_forest\":\n",
+    "        estimator = RandomForestClassifier(n_estimators=100)    \n",
+    "    elif classifier_name == \"knn\":\n",
+    "        estimator = KNeighborsClassifier(n_neighbors=10)\n",
+    "    plot_learning_curve(\n",
+    "        estimator, title, X, y, axes=axes, ylim=(0.7, 1.01), cv=cv\n",
+    "    )\n",
+    "\n",
+    "    plt.savefig(f'images/learning_curve/{classifier_name}_learning_curve.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Validation Curve functions\n",
+    "\n",
+    "from sklearn.model_selection import validation_curve\n",
+    "\n",
+    "def random_forest_validation_curve(X, y):\n",
+    "    rf = RandomForestClassifier()\n",
+    "    param_range = np.arange(1,250,10)\n",
+    "\n",
+    "    train_scores, test_scores = validation_curve(rf, \n",
+    "                                                X, \n",
+    "                                                y, \n",
+    "                                                param_name=\"n_estimators\", \n",
+    "                                                param_range=param_range,\n",
+    "                                                cv=3\n",
+    "                                                )\n",
+    "\n",
+    "    # Calculate mean and standard deviation for training set scores\n",
+    "    train_mean = np.mean(train_scores, axis=1)\n",
+    "    train_std = np.std(train_scores, axis=1)\n",
+    "\n",
+    "    # Calculate mean and standard deviation for test set scores\n",
+    "    test_mean = np.mean(test_scores, axis=1)\n",
+    "    test_std = np.std(test_scores, axis=1)\n",
+    "\n",
+    "    # Plot mean accuracy scores for training and test sets\n",
+    "    plt.plot(param_range, train_mean, label=\"Training score\", color=\"black\")\n",
+    "    plt.plot(param_range, test_mean, label=\"Cross-validation score\", color=\"dimgrey\")\n",
+    "\n",
+    "    # Plot accurancy bands for training and test sets\n",
+    "    plt.fill_between(param_range, train_mean - train_std, train_mean + train_std, color=\"gray\")\n",
+    "    plt.fill_between(param_range, test_mean - test_std, test_mean + test_std, color=\"gainsboro\")\n",
+    "\n",
+    "    # Create plot\n",
+    "    plt.title(\"Validation Curve With Random Forest\")\n",
+    "    plt.xlabel(\"Number Of Trees\")\n",
+    "    plt.ylabel(\"Accuracy Score\")\n",
+    "    plt.tight_layout()\n",
+    "    plt.legend(loc=\"best\")\n",
+    "    plt.savefig('rf_validation_curve.png')\n",
+    "\n",
+    "def knn_validation_curve(X, y):\n",
+    "    knn = KNeighborsClassifier()\n",
+    "    param_range = np.arange(1,20,1)\n",
+    "    # Calculate accuracy on training and test set using the\n",
+    "    # gamma parameter with 5-fold cross validation\n",
+    "    train_score, test_score = validation_curve(KNeighborsClassifier(), X, y,\n",
+    "                                        param_name = \"n_neighbors\",\n",
+    "                                        param_range = param_range,\n",
+    "                                            cv = 5)\n",
+    "    \n",
+    "    # Calculating mean and standard deviation of training score\n",
+    "    mean_train_score = np.mean(train_score, axis = 1)\n",
+    "    std_train_score = np.std(train_score, axis = 1)\n",
+    "    \n",
+    "    # Calculating mean and standard deviation of testing score\n",
+    "    mean_test_score = np.mean(test_score, axis = 1)\n",
+    "    std_test_score = np.std(test_score, axis = 1)\n",
+    "    \n",
+    "    # Plot mean accuracy scores for training and testing scores\n",
+    "    plt.plot(param_range, mean_train_score,\n",
+    "        label = \"Training Score\", color = 'b')\n",
+    "    plt.plot(param_range, mean_test_score,\n",
+    "    label = \"Cross Validation Score\", color = 'g')\n",
+    "    \n",
+    "    # Creating the plot\n",
+    "    plt.title(\"Validation Curve with KNN Classifier\")\n",
+    "    plt.xlabel(\"Number of Neighbours\")\n",
+    "    plt.ylabel(\"Accuracy\")\n",
+    "    plt.tight_layout()\n",
+    "    plt.legend(loc = 'best')\n",
+    "    plt.savefig('knn_validation_curve.png')\n",
+    "    plt.show()\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
