--- a/AFDetection.ipynb
+++ b/AFDetection.ipynb
@@ -390,11 +390,12 @@
     "        estimator = RandomForestClassifier(n_estimators=100)    \n",
     "    elif classifier_name == \"knn\":\n",
     "        estimator = KNeighborsClassifier(n_neighbors=10)\n",
-    "    plot_learning_curve(\n",
+    "    learning_curve = plot_learning_curve(\n",
     "        estimator, title, X, y, axes=axes, ylim=(0.7, 1.01), cv=cv\n",
     "    )\n",
     "\n",
-    "    plt.savefig(f'images/learning_curve/{classifier_name}_learning_curve.png')"
+    "    plt.savefig(f'images/learning_curves/{classifier_name}_learning_curve.png')\n",
+    "    return learning_curve"
    ]
   },
   {
@@ -441,10 +442,9 @@
     "    plt.ylabel(\"Accuracy Score\")\n",
     "    plt.tight_layout()\n",
     "    plt.legend(loc=\"best\")\n",
-    "    plt.savefig('rf_validation_curve.png')\n",
+    "    plt.savefig('images/validation_curves/rf_validation_curve.png')\n",
     "\n",
     "def knn_validation_curve(X, y):\n",
-    "    knn = KNeighborsClassifier()\n",
     "    param_range = np.arange(1,20,1)\n",
     "    # Calculate accuracy on training and test set using the\n",
     "    # gamma parameter with 5-fold cross validation\n",
@@ -473,9 +473,56 @@
     "    plt.ylabel(\"Accuracy\")\n",
     "    plt.tight_layout()\n",
     "    plt.legend(loc = 'best')\n",
-    "    plt.savefig('knn_validation_curve.png')\n",
-    "    plt.show()\n",
-    "\n"
+    "    plt.savefig('images/validation_curves/knn_validation_curve.png')\n",
+    "\n",
+    "def svm_validation_curve(X, y, kernel=None):\n",
+    "    param_range = np.logspace(-6, -1, 5)\n",
+    "    if kernel:\n",
+    "        svm = SVC(kernel=kernel)\n",
+    "    else:\n",
+    "        svm = SVC()\n",
+    "    train_scores, test_scores = validation_curve(\n",
+    "        svm,\n",
+    "        X,\n",
+    "        y,\n",
+    "        param_name=\"gamma\",\n",
+    "        param_range=param_range,\n",
+    "        scoring=\"accuracy\"\n",
+    "    )\n",
+    "    train_scores_mean = np.mean(train_scores, axis=1)\n",
+    "    train_scores_std = np.std(train_scores, axis=1)\n",
+    "    test_scores_mean = np.mean(test_scores, axis=1)\n",
+    "    test_scores_std = np.std(test_scores, axis=1)\n",
+    "\n",
+    "    plt.title(\"Validation Curve with SVM\")\n",
+    "    plt.xlabel(r\"$\\gamma$\")\n",
+    "    plt.ylabel(\"Score\")\n",
+    "    plt.ylim(0.0, 1.1)\n",
+    "    lw = 2\n",
+    "    plt.semilogx(\n",
+    "        param_range, train_scores_mean, label=\"Training score\", color=\"darkorange\", lw=lw\n",
+    "    )\n",
+    "    plt.fill_between(\n",
+    "        param_range,\n",
+    "        train_scores_mean - train_scores_std,\n",
+    "        train_scores_mean + train_scores_std,\n",
+    "        alpha=0.2,\n",
+    "        color=\"darkorange\",\n",
+    "        lw=lw,\n",
+    "    )\n",
+    "    plt.semilogx(\n",
+    "        param_range, test_scores_mean, label=\"Cross-validation score\", color=\"navy\", lw=lw\n",
+    "    )\n",
+    "    plt.fill_between(\n",
+    "        param_range,\n",
+    "        test_scores_mean - test_scores_std,\n",
+    "        test_scores_mean + test_scores_std,\n",
+    "        alpha=0.2,\n",
+    "        color=\"navy\",\n",
+    "        lw=lw,\n",
+    "    )\n",
+    "    plt.legend(loc=\"best\")\n",
+    "    plt.savefig('images/validation_curves/svm_validation_curve.png')"
    ]
   },
   {
@@ -521,17 +568,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Split the data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Split the data\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "X = af_data.drop(['Control'],axis=1)\n",
     "y = af_data['Control']\n",
     "x_train, x_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=101)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Generate learning curves for different models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Linear SVM\n",
+    "plot = plot_learning_curve(X, y, kernel='linear')\n",
+    "plot.show()"
    ]
   }
  ],
