Added learning and validation curves to jupyter notebook

--- a/AFDetection.ipynb
+++ b/AFDetection.ipynb
@@ -571,7 +571,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Split the data"
+    "### Split the data to obtain Train and Test Sets"
    ]
   },
   {
@@ -591,7 +591,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Generate learning curves for different models"
+    "### Plot Learning Curves"
    ]
   },
   {
@@ -601,8 +601,92 @@
    "outputs": [],
    "source": [
     "# Linear SVM\n",
-    "plot = plot_learning_curve(X, y, kernel='linear')\n",
+    "plot = prepare_learning_curve_data(X, y, 'linear_svm', r'Learning Curve (SVM, Linear Kernel, $\\gamma=0.001)', kernel='linear')\n",
     "plot.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SVM with RBF kernel\n",
+    "\n",
+    "plot = prepare_learning_curve_data(X, y, classifier_name='rbf_svm', title= r'Learning Curve (SVM, RBF Kernel, $\\gamma=0.001)')\n",
+    "plot.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Random Forest Model\n",
+    "# Convert data to float32 as cuML's RF implementation only accepts float32 data\n",
+    "X = X.astype(np.float32)\n",
+    "y = y.astype(np.float32)\n",
+    "plot = prepare_learning_curve_data(X, y, classifier_name='random_forest', title=r'Learning Curve (Random Forest)')\n",
+    "plot.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# KNN Classifier learning curves\n",
+    "plot = prepare_learning_curve_data(X, y, classifier_name='knn', title=r'Learning Curve (10-Nearest Neighbours)')\n",
+    "plot.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plot Validation Curves"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Linear SVM Validation Curve\n",
+    "validation_plot = svm_validation_curve(X, y, kernel='linear')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SVM with RBF kernel Validation Curve\n",
+    "validation_plot = svm_validation_curve(X, y, kernel='rbf')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Random Forest Validation Curve\n",
+    "validation_plot = random_forest_validation_curve(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# KNN Validation Curve\n",
+    "validation_plot = knn_validation_curve(X, y)"
    ]
   }
  ],
