--- a/AFDetection.ipynb
+++ b/AFDetection.ipynb
@@ -571,26 +571,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Split the data to obtain Train and Test Sets"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "X = af_data.drop(['Control'],axis=1)\n",
-    "y = af_data['Control']\n",
-    "x_train, x_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=101)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Plot Learning Curves"
    ]
   },
@@ -687,6 +667,100 @@
    "source": [
     "# KNN Validation Curve\n",
     "validation_plot = knn_validation_curve(X, y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Split the data to obtain Train and Test Sets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X = af_data.drop(['Control'],axis=1)\n",
+    "y = af_data['Control']\n",
+    "x_train, x_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=101)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Use ML Classifiers to predict AF outcome"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Linear SVM\n",
+    "kernel = 'linear'\n",
+    "print(f\"Training Support Vector Machine with {kernel} kernel...\\n\")\n",
+    "svm = SVC(kernel=kernel, random_state=101)\n",
+    "svm.fit(x_train, y_train)\n",
+    "y_pred = svm.predict(x_test)\n",
+    "clf = {'model': svm, 'x_train': x_train, 'x_test': x_test, 'y_train': y_train, 'y_test': y_test, 'y_pred': y_pred}\n",
+    "generate_report(clf, 'linear_svm')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SVM with RBF kernel\n",
+    "kernel = 'rbf'\n",
+    "print(f\"Training Support Vector Machine with {kernel} kernel...\\n\")\n",
+    "svm = SVC(kernel=kernel, random_state=101)\n",
+    "svm.fit(x_train, y_train)\n",
+    "y_pred = svm.predict(x_test)\n",
+    "clf = {'model': svm, 'x_train': x_train, 'x_test': x_test, 'y_train': y_train, 'y_test': y_test, 'y_pred': y_pred}\n",
+    "generate_report(clf, 'linear_svm')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Decision Tree\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "\n",
+    "print(f\"Training Decision Tree...\\n\")\n",
+    "dt = DecisionTreeClassifier(criterion='entropy', max_depth=5, random_state=101)\n",
+    "dt.fit(x_train, y_train)\n",
+    "y_pred = dt.predict(x_test)\n",
+    "clf = {'model': dt, 'x_train': x_train, 'x_test': x_test, 'y_train': y_train, 'y_test': y_test, 'y_pred': y_pred}\n",
+    "generate_report(clf, 'decision_tree')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Random Forest\n",
+    "print(f\"Training Random Forest...\\n\")\n",
+    "X = X.astype(np.float32)\n",
+    "y = y.astype(np.float32)\n",
+    "x_train, x_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=101)\n",
+    "rf = RandomForestClassifier(n_estimators=100, random_state=101)\n",
+    "rf.fit(x_train, y_train)\n",
+    "y_pred = rf.predict(x_test)\n",
+    "clf = {'model': rf, 'x_train': x_train, 'x_test': x_test, 'y_train': y_train, 'y_test': y_test, 'y_pred': y_pred}\n",
+    "generate_report(clf, 'random_forest')"
    ]
   }
  ],
