Added KNN, Random Forest, Correlation matrix

--- a/AFDetection.ipynb
+++ b/AFDetection.ipynb
@@ -709,7 +709,8 @@
     "svm.fit(x_train, y_train)\n",
     "y_pred = svm.predict(x_test)\n",
     "clf = {'model': svm, 'x_train': x_train, 'x_test': x_test, 'y_train': y_train, 'y_test': y_test, 'y_pred': y_pred}\n",
-    "generate_report(clf, 'linear_svm')"
+    "generate_report(clf, 'linear_svm')\n",
+    "visualize_results(clf, 'linear_svm')"
    ]
   },
   {
@@ -725,7 +726,8 @@
     "svm.fit(x_train, y_train)\n",
     "y_pred = svm.predict(x_test)\n",
     "clf = {'model': svm, 'x_train': x_train, 'x_test': x_test, 'y_train': y_train, 'y_test': y_test, 'y_pred': y_pred}\n",
-    "generate_report(clf, 'linear_svm')"
+    "generate_report(clf, 'linear_svm')\n",
+    "visualize_results(clf, 'rbf_svm')"
    ]
   },
   {
@@ -742,7 +744,8 @@
     "dt.fit(x_train, y_train)\n",
     "y_pred = dt.predict(x_test)\n",
     "clf = {'model': dt, 'x_train': x_train, 'x_test': x_test, 'y_train': y_train, 'y_test': y_test, 'y_pred': y_pred}\n",
-    "generate_report(clf, 'decision_tree')"
+    "generate_report(clf, 'decision_tree')\n",
+    "visualize_results(clf, 'decision_tree')"
    ]
   },
   {
@@ -760,7 +763,8 @@
     "rf.fit(x_train, y_train)\n",
     "y_pred = rf.predict(x_test)\n",
     "clf = {'model': rf, 'x_train': x_train, 'x_test': x_test, 'y_train': y_train, 'y_test': y_test, 'y_pred': y_pred}\n",
-    "generate_report(clf, 'random_forest')"
+    "generate_report(clf, 'random_forest')\n",
+    "visualize_results(clf, 'random_forest')"
    ]
   }
  ],
