--- a/AFDetection.ipynb
+++ b/AFDetection.ipynb
@@ -1000,17 +1000,10 @@
    "source": [
     "# Perform a Grid search to find the best weights for the Logistic Regression\n",
     "from sklearn.model_selection import GridSearchCV\n",
-    "w = [{0:1000,1:100},{0:1000,1:10}, {0:1000,1:1.0}, \n",
-    "     {0:500,1:1.0}, {0:400,1:1.0}, {0:300,1:1.0}, {0:200,1:1.0}, \n",
-    "     {0:150,1:1.0}, {0:100,1:1.0}, {0:99,1:1.0}, {0:10,1:1.0}, \n",
-    "     {0:0.01,1:1.0}, {0:0.01,1:10}, {0:0.01,1:100}, \n",
-    "     {0:0.001,1:1.0}, {0:0.005,1:1.0}, {0:1.0,1:1.0}, \n",
-    "     {0:1.0,1:0.1}, {0:10,1:0.1}, {0:100,1:0.1}, \n",
-    "     {0:10,1:0.01}, {0:1.0,1:0.01}, {0:1.0,1:0.001}, {0:1.0,1:0.005}, \n",
-    "     {0:1.0,1:10}, {0:1.0,1:99}, {0:1.0,1:100}, {0:1.0,1:150}, \n",
-    "     {0:1.0,1:200}, {0:1.0,1:300},{0:1.0,1:400},{0:1.0,1:500}, \n",
-    "     {0:1.0,1:1000}, {0:10,1:1000},{0:100,1:1000} ]\n",
-    "hyperparam_grid = {'class_weight': w}\n",
+    "\n",
+    "weights = np.linspace(0.0,0.99,200)\n",
+    "#Creating a dictionary grid for grid search\n",
+    "hyperparam_grid = {'class_weight': [{0:x, 1:1.0-x} for x in weights]}\n",
     "weighted_lg_with_gridsearch = LogisticRegression(random_state=101, max_iter=1000)\n",
     "grid_search = GridSearchCV(estimator=weighted_lg_with_gridsearch, param_grid=hyperparam_grid, cv=100, scoring='roc_auc', refit=True)\n",
     "grid_search.fit(x_train, y_train)\n",
@@ -1018,6 +1011,30 @@
     "best_score = grid_search.best_score_\n",
     "print(f\"Best parameters: {best_parameters}\")\n",
     "print(f\"Best score: {best_score}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Best parameters: {'class_weight': {0: 0.06964824120603015, 1: 0.9303517587939698}}\n",
+    "- Best score: 0.9653332483643895"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Weighted SVM using best parameters found in Logistic Regression Grid Search\n",
+    "print(f\"Training Weighted SVM...\\n\")\n",
+    "weighted_svm = SVC(kernel='linear', class_weight=best_parameters, random_state=101)\n",
+    "weighted_svm.fit(x_train, y_train)\n",
+    "y_pred = weighted_svm.predict(x_test)\n",
+    "clf = {'model': weighted_svm, 'x_train': x_train, 'x_test': x_test, 'y_train': y_train, 'y_test': y_test, 'y_pred': y_pred}\n",
+    "generate_report(clf, 'weighted_svm')\n",
+    "visualize_results(clf, 'weighted_svm')"
    ]
   }
  ],
