Added SMOTE to Jupyter Notebook

--- a/AFDetection.ipynb
+++ b/AFDetection.ipynb
@@ -927,6 +927,57 @@
     "generate_report(clf, 'weighted_svm')\n",
     "visualize_results(clf, 'weighted_svm')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use SMOTE to perform oversampling\n",
+    "from imblearn.over_sampling import SMOTE\n",
+    "\n",
+    "oversample = SMOTE()\n",
+    "X_oversampled, y_oversampled = oversample.fit_resample(X,y)\n",
+    "unique, counts = np.unique(y_oversampled, return_counts=True)\n",
+    "print(f\"Data in Control class after oversampling: {dict(zip(unique, counts))} \\n\")\n",
+    "target_variables = ['Non-AF','AF']\n",
+    "sns.set_theme(style='whitegrid')\n",
+    "sns.barplot(x=target_variables,y=counts)\n",
+    "plt.title('Count of AF and Non-AF occurrences in the Preprocessed data')\n",
+    "plt.ylabel('Count')\n",
+    "for i,_ in enumerate(counts):\n",
+    "    plt.text(i-0.25, counts[i]+0.5, counts[i], color='black', fontweight='bold')\n",
+    "img_file_path = 'images/general/count_of_AF_and_Non_AF_occurrences.png'\n",
+    "plt.savefig(img_file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Combine SMOTE with random undersampling of the majority class\n",
+    "from imblearn.under_sampling import RandomUnderSampler\n",
+    "from imblearn.pipeline import Pipeline\n",
+    "\n",
+    "oversample = SMOTE(sampling_strategy=0.33)\n",
+    "undersample = RandomUnderSampler(sampling_strategy=0.5)\n",
+    "steps = [('oversample', oversample), ('undersample', undersample)]\n",
+    "pipeline = Pipeline(steps)\n",
+    "X_oversampled, y_oversampled = pipeline.fit_resample(X,y)\n",
+    "unique, counts = np.unique(y_oversampled, return_counts=True)\n",
+    "print(f\"Data in Control class after SMOTE + random undersampling of majority class: {dict(zip(unique, counts))} \\n\")\n",
+    "target_variables = ['Non-AF','AF']\n",
+    "sns.set_theme(style='whitegrid')\n",
+    "sns.barplot(x=target_variables,y=counts)\n",
+    "plt.title('Count of AF and Non-AF occurrences in the Preprocessed data')\n",
+    "plt.ylabel('Count')\n",
+    "for i,_ in enumerate(counts):\n",
+    "    plt.text(i-0.25, counts[i]+0.5, counts[i], color='black', fontweight='bold')\n",
+    "img_file_path = 'images/general/count_of_AF_and_Non_AF_occurrences_after_SMOTE_and_random_undersampling.png'"
+   ]
   }
  ],
  "metadata": {
