Added grid search visualtion to python notebook

--- a/AFDetection.ipynb
+++ b/AFDetection.ipynb
@@ -918,6 +918,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Ploting the score for different values of weight\n",
+    "\n",
+    "sns.set_style('whitegrid')\n",
+    "plt.figure(figsize=(12,8))\n",
+    "weigh_data = pd.DataFrame({ 'score': grid_search.cv_results_['mean_test_score'], 'weight': (1- weights)})\n",
+    "sns.lineplot(weigh_data['weight'], weigh_data['score'])\n",
+    "plt.xlabel('Weight for class 1')\n",
+    "plt.ylabel('ROC AUC Score')\n",
+    "plt.xticks([round(i/10,1) for i in range(0,11,1)])\n",
+    "plt.title('Scoring for different class weights', fontsize=24)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Weighted SVM using best parameters found in Logistic Regression Grid Search\n",
     "print(f\"Training Weighted SVM...\\n\")\n",
     "weighted_svm = SVC(kernel='linear', class_weight=best_parameters, random_state=101)\n",
