Added visualization for grid search

--- a/AFDetection.ipynb
+++ b/AFDetection.ipynb
@@ -891,6 +891,7 @@
    "source": [
     "# Perform a Grid search to find the best weights for the Logistic Regression\n",
     "from sklearn.model_selection import GridSearchCV\n",
+    "#from cuml.model_selection import GridSearchCV\n",
     "\n",
     "weights = np.linspace(0.0,0.99,200)\n",
     "#Creating a dictionary grid for grid search\n",
