Fixed weighted SVM classifier

--- a/AFDetection.ipynb
+++ b/AFDetection.ipynb
@@ -939,7 +939,7 @@
    "source": [
     "# Weighted SVM using best parameters found in Logistic Regression Grid Search\n",
     "print(f\"Training Weighted SVM...\\n\")\n",
-    "weighted_svm = SVC(kernel='linear', class_weight=best_parameters, random_state=101)\n",
+    "weighted_svm = SVC(kernel='linear', class_weight=best_parameters['class_weight'], random_state=101)\n",
     "weighted_svm.fit(x_train, y_train)\n",
     "y_pred = weighted_svm.predict(x_test)\n",
     "clf = {'model': weighted_svm, 'x_train': x_train, 'x_test': x_test, 'y_train': y_train, 'y_test': y_test, 'y_pred': y_pred}\n",
