Fixed classifiers for RAPIDS

--- a/AFDetection.ipynb
+++ b/AFDetection.ipynb
@@ -861,7 +861,7 @@
     "# Comparing Weighted Logistic Regression and Logistic Regression\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
-    "lg = LogisticRegression(random_state=101, class_weight=None, max_iter=1000)\n",
+    "lg = LogisticRegression(class_weight=None, max_iter=1000)\n",
     "lg.fit(x_train, y_train)\n",
     "y_pred = lg.predict(x_test)\n",
     "clf = {'model': lg, 'x_train': x_train, 'x_test': x_test, 'y_train': y_train, 'y_test': y_test, 'y_pred': y_pred}\n",
@@ -876,7 +876,7 @@
    "source": [
     "# Defind class weight for Logistic Regression\n",
     "class_weight = {0: 25, 1: 75}\n",
-    "weighted_lg = LogisticRegression(random_state=101, class_weight=class_weight, max_iter=1000)\n",
+    "weighted_lg = LogisticRegression(class_weight=class_weight, max_iter=1000)\n",
     "weighted_lg.fit(x_train, y_train)\n",
     "y_pred = weighted_lg.predict(x_test)\n",
     "clf = {'model': weighted_lg, 'x_train': x_train, 'x_test': x_test, 'y_train': y_train, 'y_test': y_test, 'y_pred': y_pred}\n",
@@ -896,8 +896,8 @@
     "weights = np.linspace(0.0,0.99,200)\n",
     "#Creating a dictionary grid for grid search\n",
     "hyperparam_grid = {'class_weight': [{0:x, 1:1.0-x} for x in weights]}\n",
-    "weighted_lg_with_gridsearch = LogisticRegression(random_state=101, max_iter=1000)\n",
-    "grid_search = GridSearchCV(estimator=weighted_lg_with_gridsearch, param_grid=hyperparam_grid, cv=100, scoring='roc_auc', refit=True)\n",
+    "weighted_lg_with_gridsearch = LogisticRegression(max_iter=1000)\n",
+    "grid_search = GridSearchCV(estimator=weighted_lg_with_gridsearch, param_grid=hyperparam_grid, scoring='roc_auc', refit=True)\n",
     "grid_search.fit(x_train, y_train)\n",
     "best_parameters = grid_search.best_params_\n",
     "best_score = grid_search.best_score_\n",
