--- a/AFDetection.ipynb
+++ b/AFDetection.ipynb
@@ -997,6 +997,122 @@
     "    plt.text(i-0.25, counts[i]+0.5, counts[i], color='black', fontweight='bold')\n",
     "img_file_path = 'images/general/count_of_AF_and_Non_AF_occurrences_after_SMOTE_and_random_undersampling.png'"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Benchmarking - Metrics and Time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn import model_selection\n",
+    "from sklearn.utils import class_weight\n",
+    "from sklearn.metrics import classification_report\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "def run_exps(X_train: pd.DataFrame , y_train: pd.DataFrame, X_test: pd.DataFrame, y_test: pd.DataFrame) -> pd.DataFrame:\n",
+    "    '''\n",
+    "    Lightweight script to test many models and find winners\n",
+    ":param X_train: training split\n",
+    "    :param y_train: training target vector\n",
+    "    :param X_test: test split\n",
+    "    :param y_test: test target vector\n",
+    "    :return: DataFrame of predictions\n",
+    "    '''\n",
+    "    \n",
+    "    dfs = []\n",
+    "    models = [\n",
+    "              (\"DecisionTree\", DecisionTreeClassifier(max_depth=5)),\n",
+    "              ('LogReg', LogisticRegression(max_iter=1000)), \n",
+    "              ('RF', RandomForestClassifier()),\n",
+    "              ('KNN', KNeighborsClassifier()),\n",
+    "              ('SVM', SVC()),\n",
+    "              ('Linear_SVM', SVC(kernel='linear'))\n",
+    "            ]\n",
+    "    results = []\n",
+    "    names = []\n",
+    "    scoring = ['accuracy', 'precision_weighted', 'recall_weighted', 'f1_weighted', 'roc_auc']\n",
+    "    target_names = ['Non-AF', 'AF']\n",
+    "    for name, model in models:\n",
+    "        kfold = model_selection.KFold(n_splits=5, shuffle=True, random_state=90210)\n",
+    "        cv_results = model_selection.cross_validate(model, X_train, y_train, cv=kfold, scoring=scoring)\n",
+    "        clf = model.fit(X_train, y_train)\n",
+    "        y_pred = clf.predict(X_test)\n",
+    "        print(name)\n",
+    "        print(classification_report(y_test, y_pred, target_names=target_names))\n",
+    "        results.append(cv_results)\n",
+    "        names.append(name)\n",
+    "        this_df = pd.DataFrame(cv_results)\n",
+    "        this_df['model'] = name\n",
+    "        dfs.append(this_df)\n",
+    "    final = pd.concat(dfs, ignore_index=True)\n",
+    "    return final"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bootstraps = []\n",
+    "for model in list(set(final.model.values)):\n",
+    "    model_df = final.loc[final.model == model]\n",
+    "    bootstrap = model_df.sample(n=30, replace=True)\n",
+    "    bootstraps.append(bootstrap)\n",
+    "        \n",
+    "bootstrap_df = pd.concat(bootstraps, ignore_index=True)\n",
+    "results_long = pd.melt(bootstrap_df,id_vars=['model'],var_name='metrics', value_name='values')\n",
+    "time_metrics = ['fit_time','score_time'] # fit time metrics\n",
+    "## PERFORMANCE METRICS\n",
+    "results_long_nofit = results_long.loc[~results_long['metrics'].isin(time_metrics)] # get df without fit data\n",
+    "results_long_nofit = results_long_nofit.sort_values(by='values')\n",
+    "## TIME METRICS\n",
+    "results_long_fit = results_long.loc[results_long['metrics'].isin(time_metrics)] # df with fit data\n",
+    "results_long_fit = results_long_fit.sort_values(by='values')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "plt.figure(figsize=(20, 12))\n",
+    "sns.set(font_scale=2.5)\n",
+    "g = sns.boxplot(x=\"model\", y=\"values\", hue=\"metrics\", data=results_long_nofit, palette=\"Set3\")\n",
+    "plt.legend(bbox_to_anchor=(1.05, 1), loc=2, borderaxespad=0.)\n",
+    "plt.title('Comparison of Model by Classification Metric')\n",
+    "plt.savefig('images/general/benchmark_models_performance.png',dpi=300)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(20, 12))\n",
+    "sns.set(font_scale=2.5)\n",
+    "g = sns.boxplot(x=\"model\", y=\"values\", hue=\"metrics\", data=results_long_fit, palette=\"Set3\")\n",
+    "plt.legend(bbox_to_anchor=(1.05, 1), loc=2, borderaxespad=0.)\n",
+    "plt.title('Comparison of Model by Fit and Score Time')\n",
+    "plt.savefig('./benchmark_models_time.png',dpi=300)"
+   ]
   }
  ],
  "metadata": {
