Updated Jupyter Notebook

--- a/AFDetection.ipynb
+++ b/AFDetection.ipynb
@@ -1111,7 +1111,7 @@
     "g = sns.boxplot(x=\"model\", y=\"values\", hue=\"metrics\", data=results_long_fit, palette=\"Set3\")\n",
     "plt.legend(bbox_to_anchor=(1.05, 1), loc=2, borderaxespad=0.)\n",
     "plt.title('Comparison of Model by Fit and Score Time')\n",
-    "plt.savefig('./benchmark_models_time.png',dpi=300)"
+    "plt.savefig('images/general/benchmark_models_time.png',dpi=300)"
    ]
   }
  ],
