--- a/AFDetection.ipynb
+++ b/AFDetection.ipynb
@@ -126,6 +126,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Setup Environment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Install all required packages\n",
+    "%pip install -r requirements.txt\n",
+    "# Setup directory structures - create images/general and data\n",
+    "!mkdir -p images/general\n",
+    "!mkdir data\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "At this point, make sure to upload the pre-processed data to the `data/` directory and the `requirements.txt` to the base direcoty. If you are cloning the entire repository and running this notebook, you can skip this step."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Utility Functions"
    ]
   },
